# backend/backend/Models/Responses/IndexChatMessagesResponse.cs
@@ -1,0 +1,14 @@
+namespace backend.Models.Responses;
+
+public class IndexChatMessagesResponse
+{
+    public string UserId { get; set; }
+    public IEnumerable<IndexChatMessagesResponseMessage> Messages { get; set; }
+}
+
+public class IndexChatMessagesResponseMessage
+{
+    public string Message { get; set; }
+    public bool Owned { get; set; }
+    public DateTime CreatedAt { get; set; }
+}
